--- a/options.html
+++ b/options.html
@@ -77,5 +77,8 @@ input:focus + div, input:hover + div {
     <input type="button" value="Stop" id="socket-stop">
 </div>
 <script src="options.js"></script>
+<footer>
+Created by Rob W &lt;<a href="mailto:gwnRob@gmail.com">gwnRob@gmail.com</a>&gt; (support and <a href="https://github.com/Rob--W/stackexchange-notifications">source code</a> on Github).
+</footer>
 </body>
 </html>
