--- a/options.html
+++ b/options.html
@@ -1,27 +1,35 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>Settings</title>
+<title>SE Notification settings</title>
 <style>
 body {
     box-sizing: border-box;
-    width: 100%;
-    padding: 1em;
+    padding: 0 1em;
+    font-family: arial, sans-serif;
+}
+h1 {
+    margin: 0;
+    font-size: 1.25em;
+    line-height: 1em;
 }
 .container {
-    margin: 1em 3em 1em 1em;
+    margin: 1em 2em 1em 1em;
     padding: 1em;
     border: 1px solid #759;
+}
+input {
+    margin: 0;
 }
 
 /* Help */
 input + div {
     visibility: hidden;
-    max-width: 500px;
+    max-width: 550px;
     border-left: 1px solid #75F;
     padding-left: 5px;
 }
-input:focus + div, input:hover + div {
+input:focus + div, input:hover + div, input + div:hover {
     visibility: visible;
 }
 
@@ -54,31 +62,34 @@ input:focus + div, input:hover + div {
 </style>
 </head>
 <body>
+<h1>Desktop notifications for Stack Exchange - Control panel</h1>
 <div class="container">
-    <input type="text" id="uid" placeholder="Stack Exchange user id">
-    <div>Stack Exchange User ID. This is the number in the URL when you visit your Stack Exchange profile at <a href="http://stackexchange.com/" rel="noreferrer">StackExchange.com</a>.</div>
+    <input type="text" id="uid" placeholder="Stack Exchange user id" tabindex="1">
+    <div>Stack Exchange User ID. This is the number in the URL when you visit your Stack Exchange profile at <a href="http://stackexchange.com/" rel="noreferrer" target="_blank">StackExchange.com</a>.</div>
     
-    <input type="url" id="link" placeholder="Link at desktop notification (defaults to Stack Exchange inbox)">
+    <input type="url" id="link" placeholder="Link at desktop notification (defaults to Stack Exchange inbox)" tabindex="2">
     <div>The desktop notification will link to this URL upon click. It's recommended to link to the inbox at your favourite Stack Exchange site.<br>
          Defaults to <span id="default-link"></span>.
     </div>
 
-    <input type="button" id="save" value="Save">
+    <input type="button" id="save" value="Save" tabindex="3">
     <div>
         Save changes. The socket connection will automatically be (re)started.
     </div>
 </div>
 <div class="container">
-    <label><input type="checkbox" id="incognito"> Open windows in incognito mode</label>
+    <label><input type="checkbox" id="autostart" tabindex="4"> Automatically start socket connection.</label><br>
+    <label><input type="checkbox" id="run_in_bg" tabindex="5"> Run extension even if all Chrome tabs are closed.</label><br>
+    <label><input type="checkbox" id="incognito" tabindex="6"> Open tabs in incognito mode.</label><br>
 </div>
 <div class="container">
     Socket status: <span id="status"></span>.<br>
-    <input type="button" value="Start" id="socket-start">
-    <input type="button" value="Stop" id="socket-stop">
+    <input type="button" value="Start" id="socket-start" tabindex="7">
+    <input type="button" value="Stop" id="socket-stop" tabindex="8">
 </div>
 <script src="options.js"></script>
 <footer>
-Created by Rob W &lt;<a href="mailto:gwnRob@gmail.com">gwnRob@gmail.com</a>&gt; (support and <a href="https://github.com/Rob--W/stackexchange-notifications">source code</a> on Github).
+Created by Rob W &lt;<a href="mailto:gwnRob@gmail.com" target="_blank">gwnRob@gmail.com</a>&gt; (support and <a href="https://github.com/Rob--W/stackexchange-notifications" target="_blank">source code</a> on Github).
 </footer>
 </body>
 </html>
