+Screenshots, instructions (+build.sh) for Firefox
AMO version 1.5.1
CWS version 1.5
License: MIT

--- a/Firefox/data/options.html
+++ b/Firefox/data/options.html
@@ -34,7 +34,7 @@ window.onerror = function(message, filename, lineno) {
 <footer>
 Created by Rob W &lt;<a href="mailto:gwnRob@gmail.com" target="_blank">gwnRob@gmail.com</a>&gt;.<br>
 Project home: <a href="https://github.com/Rob--W/stackexchange-notifications" target="_blank">GitHub</a> &bull; <a href="http://stackapps.com/q/3780/9699?real-time-desktop-notifications-for-stack-exchange-inbox" target="_blank">Stack Apps</a> &bull;
-<a href="https://chrome.google.com/webstore/detail/ijglncoabcgieiokjmgdogpefdblmnle" target="_blank">Chrome Web Store</a>
+<a href="https://chrome.google.com/webstore/detail/ijglncoabcgieiokjmgdogpefdblmnle" target="_blank">Chrome Web Store</a> &bull; <a href="https://addons.mozilla.org/en-US/firefox/addon/real-time-desktop-notificat/" target="_blank">Firefox add-on</a>
 </footer>
 
 <script src="options.js"></script>
