--- a/Firefox/data/options.html
+++ b/Firefox/data/options.html
@@ -9,12 +9,14 @@ window.onerror = function(message, filename, lineno) {
     postMessage('#' + message + ' in ' + filename.split('/').pop() + ':' + lineno, '*');
 };
 </script>
+<script src="stackexchange-inbox-api.js"></script>
+<script src="stackexchange-inbox-api-firefox.js"></script>
 <script src="using-websocket.js"></script>
 
 <link rel="stylesheet" href="options.css" type="text/css">
 </head>
 <body>
-<h1>Desktop notifications for Stack Exchange</h1>
+<h1>Desktop notifications for Stack Exchange <span id="unread-count" title="Number of unread messages in inbox"></span></h1>
 <div class="container">
     <input type="text" id="uid" placeholder="Stack Exchange user id" tabindex="1" title="This numeric ID can be found by visiting your Stack Exchange profile.">
     <span id="display-name"></span>
@@ -22,14 +24,17 @@ window.onerror = function(message, filename, lineno) {
     <input type="url" id="link" tabindex="2" title="The desktop notification will open this URL on click. It's recommended to link to the inbox at your favourite Stack Exchange site.">
 
     <input type="button" id="save" value="Save" tabindex="3" title="Save changes. The socket connection will automatically be (re)started.">
+    
+    <input type="button" id="grant-token" value="Grant token" tabindex="4" title="An access token is only needed if you want to see the actual unread count when the add-on connects to the Stack Exchange.">
+    </div>
 </div>
 <div class="container">
-    <label title="Start listening to inbox notifications when Firefox starts"><input type="checkbox" id="autostart" tabindex="4"> Automatically start socket connection.</label><br>
+    <label title="Start listening to inbox notifications when Firefox starts"><input type="checkbox" id="autostart" tabindex="5"> Automatically start socket connection.</label><br>
 </div>
 <div class="container">
     Socket status: <span id="status"></span>.<br>
-    <input type="button" value="Start" id="socket-start" tabindex="7">
-    <input type="button" value="Stop" id="socket-stop" tabindex="8">
+    <input type="button" value="Start" id="socket-start" tabindex="8">
+    <input type="button" value="Stop" id="socket-stop" tabindex="9">
 </div>
 <footer>
 Created by Rob W &lt;<a href="mailto:gwnRob@gmail.com" target="_blank">gwnRob@gmail.com</a>&gt;.<br>
