--- a/Chrome/options.html
+++ b/Chrome/options.html
@@ -10,7 +10,7 @@
 <div class="container">
     <input type="text" id="uid" placeholder="Stack Exchange user id" tabindex="1">
     <span id="display-name"></span>
-    <div>This numeric ID can be found by visiting your Stack Exchange profile at <a href="http://stackexchange.com/" rel="noreferrer" target="_blank">StackExchange.com</a>.</div>
+    <div>This numeric ID can be found by visiting your <a href="http://stackexchange.com/" rel="noreferrer" target="_blank">Stack Exchange</a> profile, or by clicking on the "Grant token" button below.</div>
     
     <input type="url" id="link" tabindex="2">
     <div>The desktop notification will open this URL on click. It's recommended to link to the inbox at your favourite Stack Exchange site.<br>
