Use chrome.storage.sync instead of localStorage
Hack and patch.

--- a/Chrome/options.html
+++ b/Chrome/options.html
@@ -42,6 +42,7 @@ Project home: <a href="https://github.com/Rob--W/stackexchange-notifications" ta
 <a href="https://chrome.google.com/webstore/detail/ijglncoabcgieiokjmgdogpefdblmnle" target="_blank">Chrome Web Store</a> &bull; <a href="https://addons.mozilla.org/en-US/firefox/addon/real-time-desktop-notificat/" target="_blank">Firefox add-on</a>
 </footer>
 
+<script src="localStorage-proxy.js"></script>
 <script src="options.js"></script>
 <script src="options-chromeonly.js"></script>
 </body>
