--- a/Chrome/options.html
+++ b/Chrome/options.html
@@ -10,7 +10,7 @@
 <div class="container">
     <input type="text" id="uid" placeholder="Stack Exchange user id" tabindex="1">
     <span id="display-name"></span>
-    <div>This numeric ID can be found by visiting your <a href="http://stackexchange.com/" rel="noreferrer" target="_blank">Stack Exchange</a> profile, or by clicking on the "Grant token" button below.</div>
+    <div>This numeric ID can be found by visiting your <a href="https://stackexchange.com/" rel="noreferrer" target="_blank">Stack Exchange</a> profile, or by clicking on the "Grant token" button below.</div>
     
     <input type="url" id="link" tabindex="2">
     <div>The desktop notification will open this URL on click. It's recommended to link to the inbox at your favourite Stack Exchange site.<br>
@@ -37,8 +37,8 @@
     <input type="button" value="Stop" id="socket-stop" tabindex="9">
 </div>
 <footer>
-Created by Rob W &lt;<a href="mailto:gwnRob@gmail.com" target="_blank">gwnRob@gmail.com</a>&gt;.<br>
-Project home: <a href="https://github.com/Rob--W/stackexchange-notifications" target="_blank">GitHub</a> &bull; <a href="http://stackapps.com/q/3780/9699?real-time-desktop-notifications-for-stack-exchange-inbox" target="_blank">Stack Apps</a> &bull;
+Created by Rob Wu &lt;<a href="mailto:rob@robwu.nl" target="_blank">rob@robwu.nl</a>&gt;.<br>
+Project home: <a href="https://github.com/Rob--W/stackexchange-notifications" target="_blank">GitHub</a> &bull; <a href="https://stackapps.com/q/3780/9699?real-time-desktop-notifications-for-stack-exchange-inbox" target="_blank">Stack Apps</a> &bull;
 <a href="https://chrome.google.com/webstore/detail/ijglncoabcgieiokjmgdogpefdblmnle" target="_blank">Chrome Web Store</a> &bull; <a href="https://addons.mozilla.org/en-US/firefox/addon/real-time-desktop-notificat/" target="_blank">Firefox add-on</a>
 </footer>
 
