--- a/Firefox/data/options.html
+++ b/Firefox/data/options.html
@@ -15,6 +15,11 @@ function showNotificationForTesting() {
     } else {
         // Some dummy value.
         background.setUnreadCount(42);
+        clearTimeout(showNotificationForTesting.timer);
+        showNotificationForTesting.timer = setTimeout(function() {
+            // Restore original value.
+            background.setUnreadCount(0);
+        }, 5000);
     }
 }
 </script>
