Disable persist_notification pref if unsupported

--- a/Chrome/options.html
+++ b/Chrome/options.html
@@ -30,7 +30,7 @@
     <label><input type="checkbox" id="autostart" tabindex="5"> Automatically start socket connection.</label><br>
     <label><input type="checkbox" id="run_in_bg" tabindex="6"> Run extension even if all Chrome tabs are closed.</label><br>
     <label><input type="checkbox" id="incognito" tabindex="7"> Open tabs in incognito mode.</label><br>
-    <label><input type="checkbox" id="persist_notification" tabindex="7"> Persistent notifications (Chrome 50+).</label><br>
+    <label><input type="checkbox" id="persist_notification" tabindex="7"> Persistent notifications.</label><br>
 </div>
 <div class="container">
     Socket status: <span id="status"></span>.<br>
