Enlarge font in options page, s/<br>/CS/

--- a/Firefox/data/options.html
+++ b/Firefox/data/options.html
@@ -43,7 +43,7 @@ function showNotificationForTesting() {
     <input type="button" id="grant-token" value="Grant token" tabindex="4" title="An access token is only needed if you want to see the actual unread count when the add-on connects to the Stack Exchange.">
 </div>
 <div class="container">
-    <label title="Start listening to inbox notifications when Firefox starts"><input type="checkbox" id="autostart" tabindex="5"> Automatically start socket connection.</label><br>
+    <label title="Start listening to inbox notifications when Firefox starts"><input type="checkbox" id="autostart" tabindex="5"> Automatically start socket connection.</label>
 </div>
 <div class="container">
     Socket status: <span id="status"></span>.<br>
