--- a/Chrome/options.html
+++ b/Chrome/options.html
@@ -26,11 +26,11 @@
         Save changes. The socket connection will automatically be (re)started.
     </div>
 </div>
-<div class="container">
-    <label><input type="checkbox" id="autostart" tabindex="5"> Automatically start socket connection.</label><br>
-    <label><input type="checkbox" id="run_in_bg" tabindex="6"> Run extension even if all Chrome tabs are closed.</label><br>
-    <label><input type="checkbox" id="incognito" tabindex="7"> Open tabs in incognito mode.</label><br>
-    <label><input type="checkbox" id="persist_notification" tabindex="7"> Persistent notifications.</label><br>
+<div class="container specific-settings">
+    <label><input type="checkbox" id="autostart" tabindex="5"> Automatically start socket connection.</label>
+    <label><input type="checkbox" id="run_in_bg" tabindex="6"> Run extension even if all Chrome tabs are closed.</label>
+    <label><input type="checkbox" id="incognito" tabindex="7"> Open tabs in incognito mode.</label>
+    <label><input type="checkbox" id="persist_notification" tabindex="7"> Persistent notifications.</label>
 </div>
 <div class="container">
     Socket status: <span id="status"></span>.<br>
