Add option to disable desktop notifications #27

--- a/Chrome/options.html
+++ b/Chrome/options.html
@@ -30,6 +30,7 @@
     <label><input type="checkbox" id="autostart" tabindex="5"> Automatically start socket connection.</label>
     <label><input type="checkbox" id="run_in_bg" tabindex="6"> Run extension even if all Chrome tabs are closed.</label>
     <label><input type="checkbox" id="incognito" tabindex="7"> Open tabs in incognito mode.</label>
+    <label><input type="checkbox" id="use_desktop_notifications" tabindex="7"> Show desktop notifications.</label>
     <label><input type="checkbox" id="persist_notification" tabindex="7"> Persistent notifications.</label>
 </div>
 <div class="container">
