--- a/Firefox/data/options.html
+++ b/Firefox/data/options.html
@@ -44,6 +44,7 @@ function showNotificationForTesting() {
 </div>
 <div class="container">
     <label title="Start listening to inbox notifications when Firefox starts"><input type="checkbox" id="autostart" tabindex="5"> Automatically start socket connection.</label>
+    <label title="Show desktop notifications (when turned off, only the icon text is updated)"><input type="checkbox" id="use_desktop_notifications" tabindex="6"> Show desktop notifications.</label>
 </div>
 <div class="container">
     Socket status: <span id="status"></span>.<br>
